# image-compressor

./: .env.docker  .env.sample  .gitignore  README.md  api.Dockerfile  celery.Dockerfile  compose.service.yaml  compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
app/: celery_app.py  config.py  db.py  main.py  routes.py  schemas.py  services.py  storage.py  tasks.py  utils.py  webhooks.py
commands/: background-task.sh  entrypoint.sh  export.sh  run.sh
sample-data/: sheet.csv
