[tool.poetry]
name = "task-dj"
version = "0.1.0"
description = ""
authors = ["Arvind A <arvind.a@affinsys.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
motor = "^3.5.0"
pymongo = "^4.8.0"
aiohttp = "^3.9.5"
pydantic = "^2.8.2"
celery = "^5.4.0"
redis = "^5.0.7"
pydantic-settings = "^2.3.4"
aiofiles = "^24.1.0"
minio = "^7.2.7"
pillow = "^10.4.0"
gunicorn = "^22.0.0"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
